gonna do some intro restructuring

--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -1,8 +1,8 @@
 %!tex root=./thesis.tex
-\chapter{Extended Radio Sources}
+\chapter{Radio Sources}
 \label{cha:background}
 
-\todo{I'll need to explain the purpose of this chapter and give a brief outline. There'll be three sections, and I'll briefly summarise them here.}
+    As its title suggests, this thesis is focused on the identification of extended radio sources. This chapter introduces extended radio sources, describing what we see when we look at the sky with radio eyes (and radio telescopes). We will discuss the different kinds of radio sources that we can observe, how they are distributed throughout the universe, and key issues surrounding their identification.
 
     \begin{figure}[ht]
         \includegraphics[width=\textwidth]{images/gleam.jpg}
@@ -20,6 +20,8 @@
     AGN are energetic objects at the centre of galaxies, powered by supermassive black holes. The extended, strongly-magnetised plasma they eject emits synchrotron radiation from accelerating relativistic electrons, which is what we see when we observe a radio galaxy. The radio luminosity of a radio galaxy can range from $10^{22}$--$10^{30}$ W~Hz$^{-1}$\citeneeded at 1.4~GHz, making them some of the most luminous objects in the universe \citeneeded. They are therefore visible throughout the universe, with the most distant AGN detected at a redshift of 7.5 \citep{banados_800-million-solar-mass_2018}. Depending on the orientation and type of AGN, as well as its interaction with its host galaxy, the radio emission may extend far beyond the galaxy itself---up to megaparsec scales---and this emission may have complex structure. Perhaps the most impressive local example is Centaurus A (Cen A), the prominent double-lobed cloud in the upper-right of \autoref{fig:gleam} extending over 8 degrees across the sky. \autoref{sec:agn} discusses AGN in more detail.
 
     Most radio galaxies are compact and unresolved in any given radio survey due to the distance at which they can be detected and their orientation or type. This means that their structure does not always help distinguish AGN radio emission from star-forming radio emission. How can we tell these apart? Synchrotron emission has a considerably steeper spectral index than bremsstrahlung, but synchrotron emission dominates the bremsstrahlung in star-forming galaxies \citep{condon_radio_1992}. Truly star-forming galaxies can be distinguished from AGN host galaxies by using optical spectroscopy \citep[e.g.][]{mauch_radio_2007, groves_distinguishing_2008}, but radio emission is detectable at much greater distances than good quality optical spectra can be obtained at, making this solution impractical for many galaxies. Separating star-forming galaxies from AGN host galaxies at radio wavelengths remains an open problem in radio astronomy. \todo{are there any good ideas?}
+
+    Polarised radio surveys can provide extra information. While radio emission due to star formation tends to not have detectable polarisation, AGN may be very strongly polarised. This makes polarisation an excellent indicator of whether a source is an AGN, though very incomplete: many AGN will also not have detectable polarisation, and the polarised intensity is usually less than ten per cent of the total radio intensity, meaning we detect a lot less polarised radio sources than we do radio sources in general.
 
     From the size scales described above, it should be clear that a survey of extended radio sources will be dominated by AGN. Nevertheless, star-forming galaxies present a significant part of the radio population, and the fraction of the radio sky they comprise varies significantly with survey parameters.
 
@@ -140,17 +142,17 @@
     \subsection{Polarised structure}
     \label{sec:polarised-structure-of-agn}
 
-        The magnetic field of AGN is thought to be critical to their structure \citep{sikora_magnetic_2013}. \todo{}
+        The magnetic field of AGN is thought to be critical to their structure \citep{sikora_magnetic_2013}. A strong magnetic field is required to eject and collimate the jets \citep{lovelace_dynamo_1976} and the magnetic environment influences the structure of the jets \citep{osullivan_magnetic_2015}. Polarisation provides a probe for measuring this magnetic field. Radiative- and jet- mode AGN have different fractional polarisations, with jet-mode AGN having a much wider range of fractional polarisations ($p \sim [0, 30]$ per cent) compared to radiative-mode AGN (limited to $p \lta 15$ per cent), with this difference attributable to the magnetic environment \citep{osullivan_magnetic_2015}. Steep-spectrum ($\alpha > 0.5$) and flat-spectrum ($\alpha < 0.5$) AGN have differing fractional polarisations, with steep-spectrum sources having much higher fractional polarisation for frequencies $> 5$~GHz and flat-spectrum sources having higher fractional polarisation for frequencies $< 1$~GHz due to frequency-dependent depolarisation of the steep-spectrum sources \citep{saikia_polarization_1988}. Hotspots of FRII radio galaxies have low polarisation ($<10$ per cent) while the more diffuse sections may have much greater polarisation ($>20$ per cent) \citep{saikia_polarization_1988}. The direction of the magnetic field is correlated with the direction of the total intensity of the source \citep{saikia_polarization_1988}. \todo{}
 
-    \subsection{The host galaxies of AGN}
-    \label{sec:host-galaxies}
+    % \subsection{The host galaxies of AGN}
+    % \label{sec:host-galaxies}
 
-        This section will discuss the host galaxies of AGN, with necessary reference to their infrared colours as probes of the physics within. How do AGN interact with their host galaxies and vice-versa? \todo{}
+    %     This section will discuss the host galaxies of AGN, with necessary reference to their infrared colours as probes of the physics within. How do AGN interact with their host galaxies and vice-versa? \todo{}
 
-    \subsection{AGN throughout the universe}
-    \label{sec:agn-throughout-the-universe}
+    % \subsection{AGN throughout the universe}
+    % \label{sec:agn-throughout-the-universe}
 
-        What is the expected distribution of AGN? What do simulations say, and what do observations say? Note that AGN get brighter back in time. \todo{}
+    %     What is the expected distribution of AGN? What do simulations say, and what do observations say? Note that AGN get brighter back in time. \todo{}
 
     \subsection{The role of AGN}
     \label{sec:role-of-agn}
